--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,20 +4,88 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="17" />
+        android:minSdkVersion="4"
+        android:targetSdkVersion="11" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/CustomTheme" >
+        <activity
+            android:name="com.seegle.monitor.WelComeActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <service
+            android:name="com.seegle.monitor.LocalService"
+            android:exported="false" >
+            <intent-filter>
+                <action
+                    android:name="com.seegle.monitor.LocalService"
+                    android:exported="false" />
+                <action android:name="com.wind.serviceaction" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </service>
+
+        <service
+            android:name="com.seegle.monitor.MusicPlayService"
+            android:exported="false" >
+            <intent-filter>
+                <action
+                    android:name="com.seegle.monitor.MusicPlayService"
+                    android:exported="false" />
+                <action android:name="com.wind.serviceaction" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </service>
         
+        <activity android:name="com.seegle.monitor.ActOpen" >
+            <intent-filter>
+                <action android:name="android.intent.action.ActOpen" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
+        <activity android:name="com.seegle.monitor.PictureActivity"
+                  android:theme="@android:style/Theme.NoTitleBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.PictureActivity" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
+        <activity android:name="com.seegle.monitor.MainActionBarActivity"
+            android:configChanges="orientation|keyboardHidden">
+            <intent-filter>
+                <action android:name="android.intent.action.MainActionBarActivity" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.seegle.monitor.ExpandableListItemActivity"
+            android:theme="@style/Theme.Base.AppCompat.Light" >
+            <intent-filter>
+                <action android:name="android.intent.action.ExpandableListItemActivity" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name="com.seegle.monitor.TestAdapter"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar" >
+            android:theme="@style/Theme.Base.AppCompat.Light" >
             <intent-filter>
                 <action android:name="android.intent.action.TestAdapter" />
 
@@ -25,12 +93,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.seegle.monitor.WelComeActivity"
+            android:name="com.seegle.monitor.MainTabActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar" >
+            android:screenOrientation="portrait" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MainTabActivity" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -49,8 +116,7 @@
         <activity
             android:name="com.seegle.monitor.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar" >
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MainActivity" />
 
@@ -71,8 +137,7 @@
         <activity
             android:name="com.seegle.monitor.AudioPlayActivity"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar" >
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="seegle.monitor.action.AudioPlayActivity" />
 
@@ -130,8 +195,7 @@
             android:name="com.seegle.monitor.VideoPlayActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar" >
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.AndroidTestActivity" />
 
@@ -139,17 +203,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.seegle.monitor.VodeoPlayActivity"
+            android:name="com.seegle.monitor.MusicPlayActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"
             android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
-                <action android:name="android.intent.action.AndroidTestActivity" />
+                <action android:name="android.intent.action.MusicPlayActivity" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
     </application>
 
 </manifest>
