--- a/project.properties
+++ b/project.properties
@@ -11,4 +11,6 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-14
+target=android-16
+android.library.reference.1=../[d.apkbus.com]ListViewAnimations_20810/ListViewAnimations-master/v7/appcompat
+android.library.reference.2=../[d.apkbus.com]ListViewAnimations_20810/ListViewAnimations-master/library
