--- a/project.properties
+++ b/project.properties
@@ -12,5 +12,6 @@
 
 # Project target.
 target=android-16
-android.library.reference.1=../[d.apkbus.com]ListViewAnimations_20810/ListViewAnimations-master/v7/appcompat
-android.library.reference.2=../[d.apkbus.com]ListViewAnimations_20810/ListViewAnimations-master/library
+android.library.reference.1=..\\gesture-imageview-master\\main
+android.library.reference.2=..\\[d.apkbus.com]ListViewAnimations_20810\\ListViewAnimations-master\\v7\\appcompat
+android.library.reference.3=../[d.apkbus.com]ListViewAnimations_20810/ListViewAnimations-master/library
