--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.seegle.monitor"
+    package="com.seegle.monitor.sn"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -7,13 +7,19 @@
         android:minSdkVersion="4"
         android:targetSdkVersion="11" />
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/CustomTheme" >
         <activity
-            android:name="com.seegle.monitor.WelComeActivity"
+            android:name="com.seegle.monitor.sn.WelComeActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -24,50 +30,49 @@
         </activity>
 
         <service
-            android:name="com.seegle.monitor.LocalService"
+            android:name="com.seegle.monitor.sn.LocalService"
             android:exported="false" >
             <intent-filter>
                 <action
-                    android:name="com.seegle.monitor.LocalService"
+                    android:name="com.seegle.monitor.sn.LocalService"
                     android:exported="false" />
                 <action android:name="com.wind.serviceaction" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </service>
-
         <service
-            android:name="com.seegle.monitor.MusicPlayService"
+            android:name="com.seegle.monitor.sn.MusicPlayService"
             android:exported="false" >
             <intent-filter>
                 <action
-                    android:name="com.seegle.monitor.MusicPlayService"
+                    android:name="com.seegle.monitor.sn.MusicPlayService"
                     android:exported="false" />
                 <action android:name="com.wind.serviceaction" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </service>
-        
-        <activity android:name="com.seegle.monitor.ActOpen" >
+
+        <activity android:name="com.seegle.monitor.sn.ActOpen" >
             <intent-filter>
                 <action android:name="android.intent.action.ActOpen" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity android:name="com.seegle.monitor.PictureActivity"
-                  android:theme="@android:style/Theme.NoTitleBar" >
+        <activity
+            android:name="com.seegle.monitor.sn.PictureActivity"
+            android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.PictureActivity" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity android:name="com.seegle.monitor.MainActionBarActivity"
-            android:configChanges="orientation|keyboardHidden">
+        <activity
+            android:name="com.seegle.monitor.sn.MainActionBarActivity"
+            android:configChanges="orientation|keyboardHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MainActionBarActivity" />
 
@@ -75,7 +80,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.seegle.monitor.ExpandableListItemActivity"
+            android:name="com.seegle.monitor.sn.ExpandableListItemActivity"
             android:theme="@style/Theme.Base.AppCompat.Light" >
             <intent-filter>
                 <action android:name="android.intent.action.ExpandableListItemActivity" />
@@ -84,7 +89,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.seegle.monitor.TestAdapter"
+            android:name="com.seegle.monitor.sn.TestAdapter"
             android:theme="@style/Theme.Base.AppCompat.Light" >
             <intent-filter>
                 <action android:name="android.intent.action.TestAdapter" />
@@ -93,7 +98,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.seegle.monitor.MainTabActivity"
+            android:name="com.seegle.monitor.sn.MainTabActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -103,7 +108,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.seegle.monitor.login"
+            android:name="com.seegle.monitor.sn.login"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
@@ -114,7 +119,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.seegle.monitor.MainActivity"
+            android:name="com.seegle.monitor.sn.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -124,7 +129,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.seegle.monitor.PlayActivity"
+            android:name="com.seegle.monitor.sn.PlayActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
@@ -135,11 +140,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.seegle.monitor.AudioPlayActivity"
+            android:name="com.seegle.monitor.sn.AudioPlayActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" >
             <intent-filter>
-                <action android:name="seegle.monitor.action.AudioPlayActivity" />
+                <action android:name="seegle.monitor.sn.action.AudioPlayActivity" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
@@ -149,7 +154,7 @@
         <activity android:name=".SettingActivity" >
         </activity>
         <activity
-            android:name="com.seegle.monitor.waiting"
+            android:name="com.seegle.monitor.sn.waiting"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
@@ -160,12 +165,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.seegle.monitor.listview"
+            android:name="com.seegle.monitor.sn.listview"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
-                <action android:name="seegle.monitor.action.main_view" />
+                <action android:name="seegle.monitor.sn.action.main_view" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
@@ -182,7 +187,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.seegle.monitor.activity2"
+            android:name="com.seegle.monitor.sn.activity2"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -192,7 +197,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.seegle.monitor.VideoPlayActivity"
+            android:name="com.seegle.monitor.sn.VideoPlayActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" >
@@ -203,10 +208,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.seegle.monitor.MusicPlayActivity"
+            android:name="com.seegle.monitor.sn.MusicPlayActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden"
             android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MusicPlayActivity" />
